# VBO-AI-LLM-BOOTCAMP

homeworks/: .gitignore
homeworks/week2HW/: README.md  hw_db_client.py  hw_db_seed.py  hw_db_server.py  task3Answers
homeworks/week3HW/: README.md  main.py  support_tickets_minimal.csv
homeworks/week4HW/: README.md  homework_answer.md  main1_short_term_memory.py  main2_long_term_memory.py  main3_context_engineering.py  main4_hitl_and_time_travel.py
homeworks/week5HW/: README.md  hr_rag_chatbot_REAME.md
homeworks/week5HW/hr_rag_chatbot/: document_loader.py  main.py  rag_agent.py  vector_store.py
homeworks/week5HW/hr_rag_chatbot/hr_documents_pack/initial_docs/: employee_handbook.docx  leave_policy.docx  offboarding_checklist.txt  (+4 more)
homeworks/week6HW/: README.md  chinook_pg_serial_pk_proper_naming.sql  database_mcp_server.py  sql_optimizer_graph.py
homeworks/week7HW/: HowToRun.md  README.md  REPORT.md  generate_data.py  main.py  orders.csv  profile.md  q1.md  q2.md  q3.md  q4.md  q5.md  run_transcript.jsonl
homeworks/week7HW/skills/data-investigation/: SKILL.md
week1/: homework1.py  homework2.py  main.py  pyproject.toml  requirements.txt
week2/: main.py  main2_http_server.py  main3_mcp_multi_server_client.py  main3a_query_database.py  models.py
week3/: README.md  main1_structured_output.py  main2_middleware.py
week4/: canli_nb_memory_store.ipynb  main1_inmemory_saver.py  main2_postgresql_memory_saver.py  main3_memory_store.py
week5/: ingest_docs.py  rag_agent.py
week5/company_docs/: Company_Policy_Handbook.docx  my_text_doc.txt
week6/: main1_hello_langgraph.py  main2_joke.py
week6/mail_processing/: base_llm.py  email_state.py  graph_compile.py  main.py  read_and_classify_nodes.py  response_nodes.py  search_and_tracking_nodes.py
week7/: main1_quickstart.py  main1_quickstart_canli.py  main2_planning_canli.py  main2_planning_canli_stream.py  main3_filesystem_canli.py  main4_subagents_canli.py  main5_skills_and_permissions_canli_perm.py  main5_skills_and_permissions_canli_skills.py  main6_sandbox_and_shell_canli.py
