[project]
name = "week1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.5",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.2",
    "langchain-openrouter>=0.2.3",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
]
