[project]
name = "week1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chardet>=7.4.3",
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.2",
    "langchain-openrouter>=0.2.3",
    "langchain-postgres>=0.0.17",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "openai>=2.41.1",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary,pool]>=3.3.4",
    "pypdf>=6.14.2",
    "pysqlite3-binary>=0.5.4.post2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
    "unstructured[docx,pdf]>=0.23.1",
]
